# squeal

./: CMakeLists.txt  Dockerfile-build  README.md  sql-99.bnf
include/squeal/: grammar.hpp  grammar_fwd_decls.hpp  grammar_keywords.hpp  grammar_lexemes.hpp  grammar_utils.hpp  parser.hpp  parsing.hpp
include/squeal/parser/: ast.hpp
include/squeal/util/: markov.hpp  meta_grammar.hpp  utf8.hpp
src/squeal/parser/: .gitignore  CMakeLists.txt  parser.cpp  squeal-grammar.txt
src/squeal/util/: CMakeLists.txt  generator.cpp  grammar2pegtl.cpp  metasqueal.cpp
src/test/squeal/: CMakeLists.txt  grammar.cpp  parsing.cpp
src/test/squeal/parser/: CMakeLists.txt  value_expression.cpp
src/test/squeal/util/: CMakeLists.txt  markov.cpp  meta_grammar.cpp  utf8.cpp
